Test/git-issues/git-issue-1963a.dfy.expect
git-issue-1963a.dfy(12,15): Error: invalid NewtypeDecl
1 parse errors detected in git-issue-1963a.dfy
